--- a/ui/package.json
+++ b/ui/package.json
@@ -11,10 +11,13 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "@types/styled-components": "^5.1.0",
     "babel-loader": "^8.1.0",
     "html-webpack-plugin": "^4.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-spinners": "^0.8.1",
+    "styled-components": "^5.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
