--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,7 @@
     "start": "webpack-dev-server --hot --open",
     "build": "webpack --config webpack.config.js --mode production"
   },
+  "test": "jest",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -23,11 +24,14 @@
     "webpack-dev-server": "^3.10.3"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
+    "jest": "^25.4.0",
     "source-map-loader": "^0.2.4",
+    "ts-jest": "^25.4.0",
     "ts-loader": "^7.0.0",
     "typescript": "^3.8.3"
   }
